# flipkart-campaign-data-science

./: .gitignore  README.md  Responsible_AI.md  dockerfile  flipkart_campaign.csv  flipkart_campaign.csv.dvc  flipkart_campaign_cleaned.csv.dvc  flipkart_campaign_featured.csv  flipkart_campaign_featured.csv.dvc  pyproject.toml  requirements.txt
.github/workflows/: ci-pipeline.yml
Dashboard/: dashboard.py  flipkart_campaign.csv
data/: flipkart_campaign.csv  flipkart_campaign.csv.dvc
src/: analysis.py  campaign_analyzer.py  customer_segmentation.py  data_processing.py  performance_metrics.py
src/flipkart_campaign.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_campaign_analyzer.py  test_data_processing.py  test_performance_metrics.py
